--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=ODg5NTk2NjAyOTUwNTE2NzQ2.YUjjZg.kMLhdIGMpAxbVpNnQKU4QDY23Ro
-GENIUS_API_TOKEN=hJLg2Z_hF9bigM-Cw5oXYgMUpOP1cHHpvugplS8FP6Ld4ecl5TxC482Add8G8oyo
+TOKEN=
+GENIUS_API_TOKEN=
 PREFIX="ct "
